--- a/estilo1.css
+++ b/estilo1.css
@@ -54,3 +54,119 @@ body {
 .botones button:hover {
   background-color: #9D9985;
 }
+/* Estilos para el menú */
+header {
+    background-color: #003366;
+    padding: 0;
+}
+
+.menu {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+}
+
+.menu .logo {
+    font-size: 1.5em;
+    color: white;
+    font-weight: bold;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-links li a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+.imagen2{
+  margin:0 40%;
+  height: 25%;
+  width: 25%;
+}
+.contenido2{
+  margin:0 45%;
+  font-family:"lato";
+}
+.boton a{
+  margin-left: 48%;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.lista{
+  margin-left: 33%;
+}
+.lista ul li{
+  list-style: none;
+}
+.preguntas{
+  font-family: "Poppins";
+  margin-left: 2%;
+}
+.imagenes3{
+  font-family: "Poppins";
+}
+.contenido3{
+  max-width: 800px;
+    margin: 30px auto;
+    text-align: center;
+  font-family: "DM Serif Display";
+}
+.contenido3 h1{
+  font-size: 28px;
+}
+.imagenes4{
+  font-family: "Poppins";
+}
+.imagenes3, .imagenes4 {
+  display: flex;
+  justify-content: center; 
+  gap: 30px;
+  margin-bottom: 30px; 
+}
+
+.imagenes3 p, .imagenes4 p {
+  text-align: center;
+  font-weight: bold;
+  margin: 10px 0 5px;
+}
+
+.imagenes3 img, .imagenes4 img {
+  width: 180px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+.imagenes5 img, .imagenes6 img{
+  display: flex;
+  justify-content: center; 
+  gap: 30px;
+  margin-bottom: 30px; 
+}
+.imagenes5 img, .imagenes6 img{
+   width: 180px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+.imagenes5, .imagenes6{
+  font-family: "Poppins";
+}
+
+
+
+
+
+
