--- a/estilo1.css
+++ b/estilo1.css
@@ -113,7 +113,8 @@ header {
 }
 .preguntas{
   font-family: "Poppins";
-  margin-left: 2%;
+  margin-left:2%;
+
 }
 .imagenes3{
   font-family: "Poppins";
@@ -231,7 +232,21 @@ header {
   border-radius: 5px;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
-
+.botonencuesta{
+background-color: #4f46e5;
+  color: white;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-family: 'Segoe UI', sans-serif;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+}
+#resultado{
+text-decoration: none;
+}
 
 
 
