--- a/estilo1.css
+++ b/estilo1.css
@@ -247,7 +247,74 @@ background-color: #4f46e5;
 #resultado{
 text-decoration: none;
 }
+.btnrama{
+ background-color: #4f46e5;
+  color: white;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-family: 'Segoe UI', sans-serif;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s; 
+}
+.btn{
+  background-color: #4f46e5;
+  color: white;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-family: 'Segoe UI', sans-serif;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+}
+fieldset {
+    border: 1px solid #006666;
+    border-radius: 6px;
+    padding: 10px 12px;
+    margin-bottom: 15px;
+    background-color: #e6f7f7;
+    max-width: 600px;
+  }
 
+  legend {
+    font-size: 1em;
+    font-weight: bold;
+    color: #004d4d;
+    margin-bottom: 5px;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+    font-size: 0.95em;
+    margin: 5px 0;
+    color: #003333;
+    cursor: pointer;
+  }
+
+  input[type="radio"] {
+    accent-color: #006666;
+    margin-right: 8px;
+    transform: scale(1.1);
+  }
+
+  
+  @media (max-width: 600px) {}
+    fieldset {
+      padding: 8px;
+    }
+
+    legend {
+      font-size: 0.95em;
+    }
+
+    label {
+      font-size: 0.9em;
+    }
 
 
 
